serenity bdd - locating elements using selenium

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,5 @@
 webdriver.driver=chrome
+webdriver.base.url=https://the-internet.herokuapp.com/
 serenity.project.name=Serenity Project Sajjad
 webdriver.wait.for.timeout=10000
 webdriver.timeouts.implicitwait=5000
