commented jackson-bind dependency as Github was throwing security error

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,7 @@
 webdriver.driver=chrome
-webdriver.base.url=https://the-internet.herokuapp.com/
+webdriver.base.url=https://the-internet.herokuapp.com
 serenity.project.name=Serenity Project Sajjad
 webdriver.wait.for.timeout=10000
 webdriver.timeouts.implicitwait=5000
 serenity.take.screenshots=FOR_EACH_ACTION
+#webdriver.timeouts.implicitlywait=5000
